refactor(storage): stage uploads outside runtime transactions